crates/k-rust-kore/src/kore/parser/snapshots/k_rust_kore__kore__parser__pattern__tests__fixpoint_and_next.snap
---
source: crates/k-rust-kore/src/kore/parser/pattern.rs
description: "KORE pattern:\n\n\\mu{}(@X:SortSet{}, \\next{SortSet{}}(@X:SortSet{}))\n"
---
Mu {
    variable: Variable {
        kind: Set,
        name: "@X",
        sort: Application {
            name: "SortSet",
            arguments: [],
        },
    },
    body: Next {
        sort: Application {
            name: "SortSet",
            arguments: [],
        },
        argument: Variable(
            Variable {
                kind: Set,
                name: "@X",
                sort: Application {
                    name: "SortSet",
                    arguments: [],
                },
            },
        ),
    },
}
